--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/react-hooks": "^3.2.1",
     "@testing-library/user-event": "^7.2.1",
+    "bootstrap": "^4.4.1",
     "flow-bin": "^0.123.0",
     "flow-typed": "^3.1.0",
     "http-proxy-middleware": "^1.0.3",
